.kubernetes/k8s.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ostad-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ostad-app
  namespace: ostad-app
  labels:
    app: ostad-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ostad-app
  template:
    metadata:
      name: ostad-app
      labels:
        app: ostad-app
    spec:
      containers:
        - name: ostad-app
          image: rafaftahsin/ostad-app:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ostad-app-service
  namespace: ostad-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: ostad-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ostad-app-ingress
  namespace: ostad-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "ostad-app.rfft.nl"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ostad-app-service
                port:
                  number: 80
